Updated panel.js openEditModal to instantiate item data fields from db so as to not update fields to empty values on simple item updates. Added route for getting item from database in admin.js and fixed overflow bug on edit and add modal forms in css by adding overflow-y attributes and setting max height on modal-content.

--- a/public/style.css
+++ b/public/style.css
@@ -719,7 +719,7 @@ td button{
     top:0;
     width:100%;
     height:100%;
-    overflow:auto;
+    overflow:hidden;
     background-color: rgba(0, 0, 0, 0.6);
     align-items:center;
     justify-content: center;
@@ -733,8 +733,10 @@ td button{
     padding:30px;
     width:95%;
     max-width:500px;
+    max-height: 95vh;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
     position:relative;
+    overflow-y:auto;
     animation:fadeIn 0.4s ease-in-out;
 }
 
